# ros2_learning

./: PROTOBUF_FIX.md  README.md  configure_environment.sh  fix_protobuf.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_learning_ardusub/lib/ros2_learning_ardusub/: ardusub_node.py  depth_controller.py  telemetry_publisher.py  thruster_controller.py
install/ros2_learning_ardusub/share/ros2_learning_ardusub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_learning_ardusub/share/ros2_learning_ardusub/cmake/: ros2_learning_ardusubConfig.cmake
install/ros2_learning_ardusub/share/ros2_learning_ardusub/config/: ardusub_params.yaml  heading_controller.yaml
install/ros2_learning_gazebo/share/ament_index/resource_index/parent_prefix_path/: ros2_learning_gazebo
install/ros2_learning_gazebo/share/ros2_learning_gazebo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_learning_gazebo/share/ros2_learning_gazebo/cmake/: ros2_learning_gazeboConfig.cmake
install/ros2_learning_gazebo/share/ros2_learning_gazebo/config/: bridge_config.yaml
install/ros2_learning_msg/include/ros2_learning_msg/ros2_learning_msg/msg/: robot_status.hpp  rosidl_generator_cpp__visibility_control.hpp  (+2 more)
install/ros2_learning_msg/lib/ros2_learning_msg/: publisher_example.py  subscriber_example.py
install/ros2_learning_msg/share/ros2_learning_msg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_learning_msg/share/ros2_learning_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  export_ros2_learning_msg__rosidl_generator_cExport-noconfig.cmake  export_ros2_learning_msg__rosidl_generator_cppExport.cmake  export_ros2_learning_msg__rosidl_typesupport_fastrtps_cExport.cmake  export_ros2_learning_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_ros2_learning_msg__rosidl_typesupport_fastrtps_cppExport.cmake  ros2_learning_msgConfig.cmake  ros2_learning_msg__rosidl_typesupport_cExport.cmake  ros2_learning_msg__rosidl_typesupport_cppExport-noconfig.cmake  ros2_learning_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros2_learning_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ros2_learning_msg/share/ros2_learning_msg/msg/: SensorData.msg
install/ros2_learning_msg/share/ros2_learning_msg/srv/: GetStatus.idl  GetStatus_Response.msg  SetCommand.srv  SetCommand_Request.msg
log/: latest_build
ros2_learning_ardusub/: CMakeLists.txt  README.md  install_ardusub_sitl.sh  package.xml  setup_ardusub_gazebo.sh
ros2_learning_ardusub/config/: depth_controller.yaml
ros2_learning_ardusub/launch/: ardusub.launch.py
ros2_learning_ardusub/scripts/: heading_controller.py  mavlink_bridge.py
ros2_learning_gazebo/: CMakeLists.txt  README.md  install_gazebo_harmonic.sh
ros2_learning_gazebo/config/worlds/: underwater.sdf
ros2_learning_gazebo/launch/: gazebo_sim.launch.py
ros2_learning_gazebo/scripts/: gazebo_bridge_node.py  model_spawner.py  pose_publisher.py  sensor_reader.py  velocity_controller.py
ros2_learning_msg/: CMakeLists.txt  README.md
ros2_learning_msg/msg/: RobotStatus.msg
ros2_learning_msg/scripts/: service_client.py  service_server.py
(+34 files in other folders)
